--- a/public/404.html
+++ b/public/404.html
@@ -5,7 +5,7 @@
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
-      width: 25em;
+      width: 35em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
@@ -19,8 +19,9 @@
 <body>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>The page you were looking for doesn't exist.</h1>
-    <p>You may have mistyped the address or the page may have moved.</p>
+      <a href="/"><img src="/images/newsletter_header.1.jpg" /></a>
+    <h1>An error occurred or the page you requested does not exist.</h1>
+    <p>Please go back, refresh your browser and try again.  If an error occurred, a system technician will be notified.</p>
   </div>
 </body>
 </html>
