--- a/public/500.html
+++ b/public/500.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>The page you were looking for doesn't exist (404)</title>
   <style type="text/css">
     body { background-color: #fff; color: #666; text-align: center; font-family: arial, sans-serif; }
     div.dialog {
-      width: 25em;
+      width: 35em;
       padding: 0 4em;
       margin: 4em auto 0 auto;
       border: 1px solid #ccc;
@@ -17,9 +17,11 @@
 </head>
 
 <body>
-  <!-- This file lives in public/500.html -->
+  <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
+      <a href="/"><img src="/images/newsletter_header.1.jpg" /></a>
+    <h1>We're sorry, but a system error occurred.</h1>
+    <p>A system technician will be notified.</p>
   </div>
 </body>
 </html>
